--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://github.com/yugal613/blogify.git",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
